# pers_final

./: .env  README.md  database.py  main.py  models.py  pyproject.toml
models/: aeronave.py  cia.py  voo.py
routes/: aeronave.py  cia.py  home.py  voo.py
